--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,23 +25,87 @@ footer {
     bottom: 0;
     position: fixed;
     width: 100%;
-    color: var(--white-color);
+    color: #493d3f;
     padding: 0.5em;
     font-size: 1em;
     justify-content: center;
     font-size: 10px;
 }
 
-
-main{
+main {
     margin-top: 4em;
 }
 
+a { text-decoration: none; }
 
 .title {
     font-family: Titulo;
     font-size: 3.6rem;
+    color: #31282a;
 }
+
+.container {
+    display: flex;
+    width: 100%;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.justify-around {
+    justify-content: space-around;
+}
+
+.half-width {
+    width: 50%;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.btn-zero {
+    background-color: rgb(134, 153, 60);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+
+.btn-zero:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.m-1 {
+    margin: 1em;
+}
+
+.my-3 {
+    margin: 3em 0;
+}
+
+
+
 
 .text-nav { 
     font-family: 'Montserrat', sans-serif;
@@ -49,7 +113,7 @@ main{
     color: #493d3f;
 }
 
-.text-about{
+.text-about {
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
     color: #493d3f;
@@ -57,7 +121,7 @@ main{
 
 }
 
-.header{
+.header {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -78,85 +142,28 @@ main{
     height: 3em;   
 }
 
-.container{
-    display: flex;
-    width: 100%;
-}
-
-.flex{
-    display: flex;
-}
-
-.flex-column{
-    flex-direction: column;
-}
-
-.flex-row{
-    flex-direction: row;
-}
-
-.align-center{
-    align-items: center;
-}
-
-.justify-around{
-    justify-content: space-around;
-}
-
-.half-width{
-    width: 50%;
-}
-
-.container-about{
+.container-about {
     justify-content: center;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     padding: 5em;
     background-color: rgb(255, 255, 255, 0.7);
 }
 
-.home{
+.home {
     background: rgb(201,221,196);
     background: linear-gradient(123deg, rgba(201,221,196,1) 0%, rgba(255,255,253,1) 20%, rgba(250,252,245,1) 31%, rgba(171,199,102,1) 100%);
-}
-
-.full-width{
-    width: 100%;
-}
-
-.btn-zero{
-    margin-top: 3em;
-    background-color: #04AA6D; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 5px;
-    opacity: 0.6;
-    transition: 0.3s;
 }
 
 nav {
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 
-
-.btn-zero:hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-
-
-.team{
+.team, .chat {
     background-color: #dbe89b;
     text-align: justify;
 }
-
-
 
 .card { 
     margin: 1em; 
@@ -172,10 +179,9 @@ nav {
     padding: 2em;
 }
 
-.card-text-fs{
+.card-text-fs {
     margin-top: -10px;
 }
-
 
 .card img {
     border: 0.5em solid rgb(134, 153, 60);
@@ -185,26 +191,50 @@ nav {
     object-fit: cover;
 }
 
-.insta{
+.insta {
     margin-top: -10px;
 }
 
-.card-fs{
+.card-fs {
     font-size: 4em;
     margin-bottom: -10px;
 }
 
-.block{
-    background-image: url('/images/folhas.webp');
+.block {
+    background-image: url('./images/folhas.png');
     background-repeat: repeat-x;
     background-position-y: bottom;
     position: relative;
 }
   
-.block::before{
+.block::before {
     content: '';
     display: block;
     height: 100%;
     position: absolute;
     width: 100%;
+}
+
+.chat {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    margin-right: 10em;
+}
+
+
+.chat-input {
+    outline: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    border-radius: 0.5em;
+    padding: 1em;
+    resize: none; 
+    border-color: #dbe89b;
+}
+
+.chat-input:focus {
+    border-color: rgb(134, 153, 60);
 }
